# pytoda

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  data.json  environment.yml  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
.github/actions/build-docs/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml  main_documentation.yml  main_pipeline.yml  pull_request_pipeline.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_c8b6eafe227d1e57_dat_file_formatter_py.html  z_c8b6eafe227d1e57_logger_py.html  z_c8b6eafe227d1e57_unit_converter_py.html
src/pytoda/: dat_file_formatter.py  logger.py  unit_converter.py
tests/pytoda/: test_dat_file_formatter.py  test_logger.py  test_unit_converter.py
