## Overall setup

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyToDa"
version = "1.0"
authors = [{ name = "David Rudlstorfer" }]
maintainers = [{ name = "David Rudlstorfer" }]
description = "Python tools for the daily usage"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["Python", "Tools"]
classifiers = ["Programming Language :: Python :: 3.12"]

requires-python = "==3.12.*"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytoda"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
# !TODO
format_dat = "pytoda.dat_file_formatter:main"

## Tools

[tool.bandit]
exclude_dirs = [
    ".git",
    "__pycache__",
]

[tool.black]
line-length = 79

[tool.coverage.run]
relative_files = true

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov-fail-under=90 --cov=src/ --cov-append"
