## Overall setup

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyToDa"
version = "1.0"
authors = [{ name = "David Rudlstorfer" }]
maintainers = [{ name = "David Rudlstorfer" }]
description = "Python tools for the daily usage"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["Python", "Tools"]
classifiers = ["Programming Language :: Python :: 3.13"]

requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytoda"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.setuptools.dynamic.optional-dependencies]
safe = {file = ["requirements.txt"]}

[project.scripts]
convert_unit = "pytoda.unit_converter:main"

## Tools

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov-fail-under=90 --cov=src/"
